--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,8 @@
   <body>
     <p>File: <%= filename %></p>
     <p>Model used: <%= model %></p>
+    <%if (download) { %>
+      <p>download path: <%= download %></p>
+    <% } %>
   </body>
 </html>
