update package name, styling

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,12 +19,12 @@ h1 {
 form {
   font-family: arial, sans-serif;
   display: grid;
-  grid-template-columns: 2fr 8fr;
+  grid-template-columns: 2.5fr 7.5fr;
   grid-template-rows: 4rem 4rem 3rem;
   grid-column-gap: 1rem;
 
-  background-color: #ccc;
-  padding: 1rem;
+  background-color: #eee;
+  padding: 2rem;
 }
 
 form label {
@@ -36,8 +36,17 @@ form input, form select {
 }
 
 #submit {
+  /* reset input styling */
+	border: none;
+	padding: 0;
+	cursor: pointer;
+	outline: inherit;
+
   grid-column-start: 1;
   grid-column-end: 3;
+  background-color: #1e88e5;
+  color: #fff;
+  border-radius: 5px;
 }
 
 #wrapper {
