--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <p>Harness the power of machine learning to split any audio file into its respective tracks!</p>
         <p>Upload a music track, select how you want it to be split, and download the result.</p>
       </div>
-      <form action="/upload" method="post" enctype="multipart/form-data" id="inputForm">
+      <form action="/" method="post" enctype="multipart/form-data" class="box" id="inputForm">
         <label for="inputFile">Input File</label>
         <input type="file" name="inputFile"/>
         <label for="inputModel">Spleeter Model</label>
@@ -24,11 +24,21 @@
           </select>
         </div>
         <input type="submit" value="split into tracks" id="submit" />
+        <input type="hidden" name="pushSubscription" value="" id="pushSubscription"/>
       </form>
-      <div id="results" style="display:none"></div>
+      <% if (file) { %>
+      <br>
+      <div id="results" class="box">
+        <p><i class="filename"><%- displayName %></i> has been uploaded successfully.</p>
+        <p>You will recieve a push notification when your stems are ready for download.</p>
+        <p>There are <%- jobsAhead %> jobs ahead of yours in the queue.</p>
+        <a href="" id="fileDownload" style="display:none">Click here to download <%- displayName %> stems</a>
+      </div>
+      <% } %>
     </div>
     <footer>
       <p>Uses <a href="https://github.com/deezer/spleeter">Spleeter ML library</a>.</p>
     </footer>
+    <script type="application/javascript" src="/main.js"></script>
   </body>
 </html>
