add expiration notice

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,6 +42,7 @@
         <a href="" target='_blank' id="fileDownload" data-fileId="<%- fileId %>">
           Click here to download "<%- displayName %>" stems
         </a>
+        <p id="expiration">Your file will remain available for download for 2 hours.</p>
       </div>
       <% } %>
     </div>
