--- a/public/css/style.css
+++ b/public/css/style.css
@@ -77,7 +77,7 @@ form input, form select {
   grid-template-rows: 1fr auto;
 }
 
-#pushPermission, #fileDownload, #second {
+#pushPermission, #fileDownload, #second, #expiration {
   display: none;
 }
 
