remove # placeholder in link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <p>Harness the power of machine learning to split any audio file into its respective tracks!</p>
         <p>Upload a music track, select how you want it to be split, and download the result.</p>
         <p id="pushPermission">This app uses push notifications to alert you about the status of your track.
-          <a href="#" id="requestPermission" onclick="requestPermission()">Click here to allow</a>
+          <a href="" id="requestPermission" onclick="requestPermission()">Click here to allow</a>
         </p>
       </div>
       <form action="/" method="post" enctype="multipart/form-data" class="box" id="inputForm">
