--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
           <a href="" id="requestPermission" onclick="requestPermission()">Click here to allow</a>
         </p>
       </div>
-      <form action="/" method="post" enctype="multipart/form-data" class="box" id="inputForm">
+      <form method="post" enctype="multipart/form-data" class="box" id="inputForm">
         <label for="inputFile">Input File</label>
         <input type="file" name="inputFile" onchange="validateFile(this)" />
         <label for="inputModel">Spleeter Model</label>
